# neshama

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  license-deploy-report.md  package-lock.json  pyproject.toml  screenshot.py  test_gdpr_api.py  工作日志-2026-05-07.md  工作日志-2026-05-08.md  开发管理规范.md  成本分析报告.md  端到端验证报告-LLM.json  端到端验证报告-LLM.md  端到端验证报告.md  设计规范-v1.0.md  调研报告-AI-NPC竞品与商业化.md
.github/workflows/: build-release.yml
Webs/: profile.html
adapters/coze/: README.md  README_EN.md  __init__.py  config_checklist.md  coze_adapter_script.py  coze_plugin.py  coze_tools.py  导入指南.md  示例Prompt_学习陪伴者.md  设计方案.md
adapters/hermes/: EXAMPLES.md  QUICKSTART.md  README.md  README_EN.md  实战案例.md  快速入门.md
adapters/openclaw/: EXAMPLES.md  QUICKSTART.md  README.md  (+3 more)
code/: ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
debug-logs/: 2026-05-08-ue5-sdk.md
dev-logs/: 2026-05-08-ue5-sdk.md
dev-plans/: 2026-05-08-r8-buildcs-fix.md  2026-05-08-seele-机制完善方案.md  2026-05-08-ue5-sdk-compile.md  2026-05-08-驱力系统架构提案.md  Neshama灵魂引擎V2-策划初稿.md
docs/: ARCHITECTURE.md  ARCHITECTURE_CN.md  CONFLICT.md  EXAMPLE_SELEE.md  LEARNING.md  MEMORY.md  MEMORY_CN.md  OCEAN.md  OCEAN_CN.md  PHILOSOPHY.md  PHILOSOPHY_CN.md  README.md  README_CN.md  SELEE_VS_NESHAMA.md  SOUL.md  SOUL_CN.md  SYSTEMS.md  SeeleOS框架完整文档.md  email-setup.md  getting-started.md  灵魂系统-社区接入设计文档.md  灵魂系统介绍-社区版.md
examples/: README.md
model_adapter/: __init__.py  dialogue_benchmark.py  model_manager.py  orchestrator.py  pricing.py  router.py
neshama/: __init__.py  cli.py
release/: README.md
screenshots/: capture-soul-panel.js  screenshot_pages.js
tests/: __init__.py  test_auth_api.py  test_azure_provider.py  test_benchmark.py  test_billing_api.py  test_composite_emotion.py  test_concurrency.py  test_connection_pool.py  test_core.py  test_cs_consistency.py  test_deepseek_provider.py  test_e2e_llm.py  test_e2e_soul.py  test_elevenlabs_provider.py  test_emotion.py  test_emotion_driver.py  test_engine.py  test_enhanced_health.py  test_entity_graph.py  test_fast_path.py  test_game_api.py  test_game_event.py  test_graceful_shutdown.py  test_grudge_factor.py  test_health.py  test_http_pool.py  test_information_propagator.py  test_initial_emotions.py  test_license_api.py  test_llm_timeout_retry.py  test_local_whisper.py  test_middleware.py  test_npc_behavior.py  test_npc_dialogue.py  test_npc_manager.py  test_npc_memory_bridge.py  test_openai_provider.py  test_orchestrator.py  test_piper_provider.py  test_plans.py  (+23 more)
voice_cache/: npc_voice_test_npc_001.json  npc_voice_test_npc_002.json  npc_voice_test_npc_003.json
website/: docs.html  index.html  pricing.html
(+375 files in other folders)
