[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neshama"
version = "1.0.0"
description = "AI Agent Personality Operating System - Give agents a soul"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Neshama Team"}
]
keywords = [
    "ai",
    "agent",
    "personality",
    "emotion",
    "occean",
    "soul",
    "memory"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "websockets>=11.0",
    "pywebview>=4.0",
    "aiohttp>=3.8.0",
    "stripe>=7.0.0",
]
# Local voice providers (optional)
local-whisper = [
    "openai-whisper>=20231117",
]
local-piper = [
    "piper-tts>=1.0.0",
]
voice = [
    "openai-whisper>=20231117",
    "piper-tts>=1.0.0",
]
# Optional storage backends
redis = [
    "redis>=4.5.0",
]
# Optional monitoring
monitoring = [
    "sentry-sdk>=1.25.0",
    "psutil>=5.9.0",
]
# Full production dependencies
prod = [
    "redis>=4.5.0",
    "sentry-sdk>=1.25.0",
    "psutil>=5.9.0",
]

[project.scripts]
neshama = "neshama.cli:main"

[project.urls]
Homepage = "https://github.com/neshama/neshama"
Documentation = "https://neshama.github.io/neshama/"
Repository = "https://github.com/neshama/neshama"
Issues = "https://github.com/neshama/neshama/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["neshama*"]

[tool.setuptools.package-data]
neshama = ["py.typed"]
"*" = ["README.md", "CHANGELOG.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
